[tool.poetry]
name = "unet"
version = "0.1.0"
description = ""
authors = ["ZharovVsevolod <wsewolod@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp310-cp310-win_amd64.whl"}
hydra-core = "^1.3.2"
lightning = "^2.1.2"
datasets = "^2.15.0"
wandb = "^0.16.0"
einops = "^0.7.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
opencv-python = "^4.8.1.78"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
